[CARBONDATA-1423] added integration test cases for presto
This closes #1303